--- a/loading.html
+++ b/loading.html
@@ -59,7 +59,7 @@
   <script>
     // 3 saniye sonra yönlendirme
     setTimeout(() => {
-      window.location.href = "https://codelomi.github.io/codelomi/index.html";
+      window.location.href = "https://codelomi.github.io/codelomi.xyz/";
     }, 3000);
   </script>
 </head>
