--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>CodeLomi | Loading...</title>
   <link rel="icon" href="1codelomi.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <meta name="description" content="CodeLomi Sayfa">
+  <meta name="description" content="Ben bu sitede size yarar birşey hedefliyorum kodlamayı öğrenenler proje fikri bulmak isteyenler için geliştiriyorum içinde bi sürü programlama ile alakalı yazıları var ">
+<meta name="keywords" content="codelomi, blog, hakkımda, Discord bot">
+<meta name="author" content="AntiVirüs, Antivirus, ANTİVİRUS,antivirüs, antivirus">
+<meta name="robots" content="Ana Sayfa, Hakkımda">
   <style>
     * {
       margin: 0;
